--- a/src/App.css
+++ b/src/App.css
@@ -45,6 +45,18 @@ main{
 .counter h3>span{
   color: rgba(250, 250, 250, 1);
 }
+.counter-buttons{
+  padding-top: 6%;
+  width: 100%;
+  display: flex;
+  gap: 1.5rem;
+}
+.counter button{
+  font-size: 115%;
+  padding: 2% 4%;
+  /* flex: 1 1 70%; */
+  width: 35%;
+}
 #counter-add-num{
   width: 90%;
   background-color: inherit;
@@ -58,12 +70,17 @@ main{
   font-size: 1.1rem;
   display: block;
   color: rgba(250, 250, 250, 1);
+  margin-bottom: 4%;
 }
 .counter-adds{
   width: 50%;
 }
 .counter-adds>form{
   width: 100%;
+}
+.counter-adds input[type='submit']{
+  font-size: 115%;
+  padding: 1.5% 4%;
 }
 #counter-add-num:focus, 
 button:focus{
